Fixed homepage CSS for pet details container - was too small

--- a/python-project-starter/react-app/src/components/Pets/petsList.css
+++ b/python-project-starter/react-app/src/components/Pets/petsList.css
@@ -60,7 +60,6 @@
 
 .petslist-main-container .pet-details {
     font-size: 12px;
-    max-width: 250px;
     width: 250px;
     align-self: center;
 }
